# chatapp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  docker-compose.dev.yml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
crates/api-server/: Cargo.toml
crates/api-server/migrations/: 20241227000001_initial.sql
crates/api-server/src/: config.rs  db.rs  error.rs  main.rs
crates/api-server/src/services/: chat.rs  mod.rs  user.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: lib.rs
crates/shared/src/proto/: mod.rs
docker/: Dockerfile.api
mobile/: biome.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
mobile/src/: App.tsx  main.tsx
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: commands.rs  grpc.rs  lib.rs  main.rs  state.rs
mobile/src/pages/: ChatPage.tsx  HomePage.module.css  HomePage.tsx  LoginPage.module.css  LoginPage.tsx  ProfilePage.module.css  ProfilePage.tsx
mobile/src/styles/: global.css
mobile/src/types/: index.ts
proto/: chat.proto  common.proto  user.proto
