[workspace]
resolver = "2"
members = [
    "crates/api-server",
    "crates/shared",
    "mobile/src-tauri",
]
# Default members for CI builds (excludes mobile which requires system libraries)
default-members = [
    "crates/api-server",
    "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ChatApp Team"]
license = "MIT"
repository = "https://github.com/AI1411/chatapp"

[workspace.dependencies]
# gRPC / Protocol Buffers
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "migrate", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
